--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,2 @@
-@charset 'UTF-8';
-body { font-family: Comic Sans MS, cursive, sans-serif; }
+@charset "UTF-8";
+body { font-family: Tahoma, Geneva, sans-serif; }
